syntax = "proto3";
package xsuportal.proto.resources;
option go_package = "github.com/isucon/isucon10-final/benchmarker/proto/xsuportal/resources";

import "google/protobuf/timestamp.proto";

message BenchmarkResult {
  bool finished = 1;
  bool passed = 2;
  int64 score = 3;
  ScoreBreakdown score_breakdown = 4;
  message ScoreBreakdown {
    int64 raw = 1;
    int64 deduction = 2;
  }

  string reason = 5;
  google.protobuf.Timestamp marked_at = 6;
  // string stdout = 6;
  // string stderr = 7;

  // Survey survey = 8;

  // message Survey {
  //   string language = 1;
  // }
}
